@@ -1,6 +1,8 @@
 New in v0.7.01 (2014/11/??)
 ---------------------------
 Enhancements:
+* Remove valid_extension() check from file_naming.py.  It was
+  causing failed tests for short filenames.  Thanks edso.
 * Partial fix for PPA build failures, new backend name.
 * Merged in lp:~ed.so/duplicity/fix.dpbx.import
   - fix dpbx import error import lazily
